@@ -12,8 +12,10 @@ cupsys (1.3.6-2) UNRELEASED; urgency=low
   * Move scripting examples from cupsys to libcupsys2-dev. No need to install
     those 1.3 MB by default on every system, this is much more developer
     oriented. Mention this in the package description.
+  * debian/rules: Explicitly build with -fno-stack-protector on arm and armel,
+    since the compiler produces segfaulting binaries. Works around #469517.
 
- -- Martin Pitt <mpitt@debian.org>  Tue, 11 Mar 2008 21:20:11 +0100
+ -- Martin Pitt <mpitt@debian.org>  Sun, 16 Mar 2008 14:18:22 +0100
 
 cupsys (1.3.6-1) unstable; urgency=low
 
